<resources>
    <string name="app_name">Music Shop</string>
    <string name="sale">Sale 30%</string>
    <string name="select">Select Item</string>
    <string name="addToCard">ADD TO CARD</string>
    <string name="hint">Your name</string>
    <string name="orderPrice">Order price:</string>
    <string name="quantity">Quantity:</string>
    <string name="currentPrice">0</string>
    <string name="dollar">$</string>
    <string name="count">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Customer name:</string>
    <string name="goods_name">Goods name:</string>
    <string name="price">Price:</string>
    <string name="submit_order">submit order</string>
</resources>