<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bBackMain"
            style="@style/iconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:icon="@drawable/ic_arrow_back" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_submit_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top"
        app:layout_constraintVertical_bias="0.821">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/customer_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Joony" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/goods_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/tv_customer"
            app:layout_constraintTop_toBottomOf="@id/tv_customer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_name"
            tools:text="Guitar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/tv_goods"
            app:layout_constraintTop_toBottomOf="@id/tv_goods" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_quantity_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_goods_name"
            tools:text="1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/tv_quantity"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity_count"
            tools:text="1000" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dollar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_price_count"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity_count" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/orderPrice"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_order_price_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_price_count"
            tools:text="5000" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dollar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dollar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/tv_order_price_count"
            app:layout_constraintTop_toBottomOf="@id/tv_price_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="36dp"
        android:text="@string/submit_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>